deps/v8/test/message/fail/modules-cycle6.out
*modules-skip-cycle6.js:5: SyntaxError: The requested module 'modules-cycle6.js' does not provide an export named 'foo'
export {foo} from "modules-cycle6.js";
        ^^^
SyntaxError: The requested module 'modules-cycle6.js' does not provide an export named 'foo'

